gateway-hybrid-k8s-istio/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hybrid-router
  namespace: skais-2-test
spec:
  hosts:
    - "*"
  gateways:
    - hybrid-gateway
  http:
    - match:
        - uri:
            regex: ^/service-a(/|$)(.*)
      rewrite:
        uriRegexRewrite:
          match: ^/service-a(/|$)(.*)
          rewrite: /\2
      route:
        - destination:
            host: service-a-svc.skais-2-test.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            regex: ^/service-b(/|$)(.*)
      rewrite:
        uriRegexRewrite:
          match: ^/service-b(/|$)(.*)
          rewrite: /\2
      route:
        - destination:
            host: service-b-svc.skais-2-test.svc.cluster.local
            port:
              number: 8080
